# pulseview

./: .gitignore  CMakeLists.txt  main.cpp
bindings/python/: CMakeLists.txt
bindings/python/pulseview/: CMakeLists.txt  global.h  typesystem_pulseview.xml
bindings/python/tests/: CMakeLists.txt  import_test.py
pv/: application.cpp  devicemanager.cpp  devicemanager.h  mainwindow.cpp  mainwindow.h  sigsession.cpp  sigsession.h  storesession.cpp
pv/data/: logicsnapshot.cpp  logicsnapshot.h  snapshot.cpp  snapshot.h
pv/data/decode/: decoder.cpp
pv/dialogs/: about.cpp  connect.cpp  connect.h
pv/popups/: channels.cpp  deviceoptions.cpp  deviceoptions.h  probes.cpp  probes.h
pv/prop/: bool.cpp  double.cpp  enum.cpp  int.cpp  string.cpp
pv/prop/binding/: binding.cpp  decoderoptions.cpp  deviceoptions.cpp  deviceoptions.h
pv/toolbars/: samplingbar.cpp  samplingbar.h
pv/view/: analogsignal.cpp  logicsignal.cpp  logicsignal.h  signal.cpp  signal.h  trace.h  viewport.h
pv/widgets/: sweeptimingwidget.cpp  sweeptimingwidget.h
python/: CMakeLists.txt
python/pulseview/: CMakeLists.txt  global.h  typesystem_pv.xml
